product collapse fix

--- a/NG/src/app/products/products.component.css
+++ b/NG/src/app/products/products.component.css
@@ -329,11 +329,6 @@
       margin-bottom: 20px;
   }
 
-  .collapse-toggle {
-    color: #fff;
-    font-size: 32px;
-  }
-
   .collapse-toggle:hover {
       text-decoration: none;
   }
